--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'England -- Social life and customs -- 19th century -- Fiction'
 - !lcsh 'Love stories'
 - !lcsh 'Man-woman relationships -- Fiction'
+- GITenberg
 title: Two Studios
 url: http://www.gutenberg.org/ebooks/43159
